add list_experiments endpoint
